# loot_library.h

./: .gitignore  CMakeLists.txt  README.md
src/: loot_functions.c  loot_functions.h  loot_table_parser.c  test.c
src/examples/: example.c
src/v2/: logging.h  loot_functions.c  loot_functions.h  loot_table_context.c  test.c
